fixed bug -- gui styling did not stretch to fill popup

--- a/src/Components/Timer/Clock/Clock.module.css
+++ b/src/Components/Timer/Clock/Clock.module.css
@@ -2,6 +2,9 @@
     width: 15rem;
     height: 15rem;
 
+    margin-top: 2.5rem;
+    margin-bottom: 3rem;
+
     box-shadow: 0 -3em 6em #17171a,
     0.2em -0.2em 2em rgba(255, 255, 255, 0.7);
 
