--- a/src/Components/Timer/FocusText/FocusText.module.css
+++ b/src/Components/Timer/FocusText/FocusText.module.css
@@ -1,10 +1,12 @@
 .focusBox {
     width: 100%;
-    height: 2rem;
+    /* height: 2rem; */
 
-    padding: 0.3rem 0.5rem 0.5rem 0.5rem;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+
+    margin-top: 1.2rem;
+    margin-bottom: 0;
 
     color: white; 
     letter-spacing: 0.1em;
