--- a/src/Components/Timer/Timer/Timer.module.css
+++ b/src/Components/Timer/Timer/Timer.module.css
@@ -1,17 +1,17 @@
 .body {
-    background-color: #212529;
-    height: inherit;
-    width: inherit;
-    padding: 5rem;
+    height: auto;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 
 .editButton {
-
     height: 2rem;
     width: 2rem;
 
