--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
-body {
-    min-width: 30rem;
-    min-height: 20rem;
-    height: 100vh;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 /* Note: body is parent of main element */
-main {
+html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #212529;
+}
+
+main {
+    width: 30rem;
+    height: 20rem; 
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
